[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/target_selection_panel.gd" id="1"]

[node name="TargetSelectionPanel" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SELECT TARGET"
horizontal_alignment = 1

[node name="CoverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Clear Shot"
horizontal_alignment = 1

[node name="HeadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Head: 0%"

[node name="ThoraxButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Thorax: 0%"

[node name="StomachButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Stomach: 0%"

[node name="LeftArmButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Left Arm: 0%"

[node name="RightArmButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Right Arm: 0%"

[node name="LeftLegButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Left Leg: 0%"

[node name="RightLegButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Right Leg: 0%"

[node name="CancelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CANCEL"